--- a/custom-view/src/main/res/values/j_styles.xml
+++ b/custom-view/src/main/res/values/j_styles.xml
@@ -3,7 +3,7 @@
     <style name="jin_custom_view_line_horizontal">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1px</item>
-        <item name="android:background">@color/back_white_divider</item>
+        <item name="android:background">@color/grey_divider</item>
     </style>
 
 </resources>
