textMoreView set text color

--- a/custom-view/src/main/res/values/j_attrs.xml
+++ b/custom-view/src/main/res/values/j_attrs.xml
@@ -8,7 +8,9 @@
 
     <declare-styleable name="TextMoreLayout">
         <attr name="tmLeftText" format="string" />
-        <attr name="tmRightTextTails" format="string" />
+        <attr name="tmLeftTextColor" format="color" />
+        <attr name="tmRightText" format="string" />
+        <attr name="tmRightTextColor" format="color" />
         <attr name="tmRightImgVisible" format="boolean" />
     </declare-styleable>
 </resources>
