--- a/custom-view/src/main/res/values/j_colors.xml
+++ b/custom-view/src/main/res/values/j_colors.xml
@@ -3,4 +3,8 @@
     <color name="white">#ffffff</color>
 
     <color name="grey_divider">#ebebeb</color>
+
+
+    <color name="tm_default_left_text_color">#666666</color>
+    <color name="tm_default_right_text_color">#aaaaaa</color>
 </resources>
