--- a/custom-view/src/main/res/layout/text_more_layout.xml
+++ b/custom-view/src/main/res/layout/text_more_layout.xml
@@ -18,7 +18,7 @@
             android:layout_height="44dp"
             android:layout_centerVertical="true"
             android:gravity="center"
-            android:textColor="#666666"
+            android:textColor="@color/tm_default_left_text_color"
             android:textSize="15dp"/>
 
         <ImageView
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@id/more"
-            android:textColor="#aaaaaa"
+            android:textColor="@color/tm_default_right_text_color"
             android:textSize="12sp"/>
     </RelativeLayout>
 
