--- a/custom-view/src/main/res/values/j_dimens.xml
+++ b/custom-view/src/main/res/values/j_dimens.xml
@@ -1,3 +1,4 @@
 <resources>
-
+    <dimen name="text_more_layout_default_right_text_size">12sp</dimen>
+    <dimen name="text_more_layout_default_left_text_size">15sp</dimen>
 </resources>
