TailsTextLayout 增加前后缀颜色定义

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
 
     <color name="grey_back">#ebebeb</color>
+    <color name="red">#ff3939</color>
+    <color name="green">#66CDAA</color>
 </resources>
