--- a/app/src/main/res/layout/tails_test.xml
+++ b/app/src/main/res/layout/tails_test.xml
@@ -1,25 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:TailsTextView="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/mTextMoreLayout"
+    <com.hangzhou.jin.customview.TailsTextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
         android:background="@color/grey_back"
         android:gravity="center"
-        android:text="TextMoreLayout"/>
+        android:text="mTailsTextLayout"
+        TailsTextView:leftTextColor="@color/red"
+        TailsTextView:leftTextTails="前缀"
+        TailsTextView:rightTextColor="@color/green"
+        TailsTextView:rightTextTails="后缀"/>
 
-    <TextView
-        android:id="@+id/mTailsTextLayout"
+    <com.hangzhou.jin.customview.TailsTextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
         android:background="@color/grey_back"
         android:gravity="center"
-        android:text="mTailsTextLayout"/>
+        android:text="mTailsTextLayout"
+        TailsTextView:rightTextColor="@color/green"
+        TailsTextView:rightTextTails="后缀"/>
 </LinearLayout>
