--- a/custom-view/src/main/res/values/j_attrs.xml
+++ b/custom-view/src/main/res/values/j_attrs.xml
@@ -4,6 +4,8 @@
         <attr name="leftTextTails" format="string" />
         <attr name="rightTextTails" format="string" />
         <attr name="line_through" format="boolean" />
+        <attr name="leftTextColor" format="color" />
+        <attr name="rightTextColor" format="color" />
     </declare-styleable>
 
     <declare-styleable name="TextMoreLayout">
