--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:text="TextMoreLayout"/>
 
     <TextView
-        android:id="@+id/mTailsTextLayout"
+        android:id="@+id/mTailsTextView"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
