--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="10dp"
         android:background="@color/grey_back"
         android:gravity="center"
-        android:text="TextMoreLayout"/>
+        android:text="mTextMoreLayout"/>
 
     <TextView
         android:id="@+id/mTailsTextView"
@@ -22,4 +22,13 @@
         android:background="@color/grey_back"
         android:gravity="center"
         android:text="mTailsTextLayout"/>
+
+    <TextView
+        android:id="@+id/mLoadView"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/grey_back"
+        android:gravity="center"
+        android:text="mLoadView"/>
 </LinearLayout>
