--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+          android:id="@+id/tv"
           android:layout_width="match_parent"
-          android:layout_height="40dp" />
+          android:layout_height="40dp"
+          android:background="@color/green"
+          android:gravity="center"
+          android:textColor="@color/white"
+          android:textSize="18sp"/>
