--- a/app/src/main/res/layout/j_recycler_view_test.xml
+++ b/app/src/main/res/layout/j_recycler_view_test.xml
@@ -8,10 +8,10 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/green"
+        android:background="@color/grey_back"
         android:gravity="center"
         android:text="JRecyclerView"
-        android:textColor="@color/white"
+        android:textColor="@color/red"
         android:textSize="18sp"/>
 
     <com.hangzhou.jin.customview.JRecyclerView
