--- a/custom-view/src/main/res/layout/j_recycler_view.xml
+++ b/custom-view/src/main/res/layout/j_recycler_view.xml
@@ -2,8 +2,7 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
+    android:layout_height="match_parent">
 
     <com.hangzhou.jin.customview.LoadView
         android:id="@+id/loadView"
@@ -19,6 +18,6 @@
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clipToPadding="false"/>
+            android:scrollbars="none"/>
     </android.support.v4.widget.SwipeRefreshLayout>
 </FrameLayout>
