--- a/app/src/main/res/layout/super_text_test.xml
+++ b/app/src/main/res/layout/super_text_test.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.hangzhou.jin.customview.SuperText
+    <com.hangzhou.jin.customview.SuperText2
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
