--- a/custom-view/src/main/res/layout/load_view.xml
+++ b/custom-view/src/main/res/layout/load_view.xml
@@ -33,7 +33,7 @@
         android:id="@+id/progress_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/load_view_font_color_gray"
+        android:background="@color/grey_back"
         android:visibility="gone">
 
         <ProgressBar
