--- a/custom-view/src/main/res/values/j_attrs.xml
+++ b/custom-view/src/main/res/values/j_attrs.xml
@@ -17,6 +17,7 @@
         <attr name="tmRightTextColor" format="color"/>
         <attr name="tmRightTextSize" format="dimension"/>
         <attr name="tmRightImgVisible" format="boolean"/>
+        <attr name="tmBottomLineVisible" format="boolean"/>
     </declare-styleable>
 
     <declare-styleable name="LoadView">
