--- a/custom-view/src/main/res/values/j_colors.xml
+++ b/custom-view/src/main/res/values/j_colors.xml
@@ -16,5 +16,7 @@
     <color name="super_text_cf">#ffffff</color>
     <color name="super_text_c0">#000000</color>
 
+    <color name="title_view_text">#333333</color>
+
 
 </resources>
