title view demo

--- a/app/src/main/res/layout/title_view_test.xml
+++ b/app/src/main/res/layout/title_view_test.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <com.hangzhou.jin.customview.TitleView
-        android:id="@+id/title"
+        xmlns:TitleView="http://schemas.android.com/apk/res-auto"
+        android:id="@id/title_view"
         android:layout_width="match_parent"
-        android:layout_height="48dp"/>
+        android:layout_height="wrap_content"
+        TitleView:defaultLeftIcon="true"
+        TitleView:title="Normal Title"/>
 
 </LinearLayout>
