--- a/custom-view/src/main/res/values/j_attrs.xml
+++ b/custom-view/src/main/res/values/j_attrs.xml
@@ -2,7 +2,9 @@
 <resources>
     <declare-styleable name="TailsTextView">
         <attr name="leftTextTails" format="string"/>
+        <attr name="leftTextSize" format="dimension"/>
         <attr name="rightTextTails" format="string"/>
+        <attr name="rightTextSize" format="dimension"/>
         <attr name="line_through" format="boolean"/>
         <attr name="line_under" format="boolean"/>
         <attr name="leftTextColor" format="color"/>
