--- a/custom-view/src/main/res/layout/title_view_attach.xml
+++ b/custom-view/src/main/res/layout/title_view_attach.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
               android:orientation="vertical">
 
     <com.hangzhou.jin.customview.TitleView
@@ -9,6 +9,7 @@
         android:id="@id/title_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#00ffff"
         TitleView:defaultLeftIcon="true"
         TitleView:middleText="Normal Title"/>
 
