--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,4 +58,13 @@
         android:background="@color/grey_back"
         android:gravity="center"
         android:text="mTitleView"/>
+
+    <TextView
+        android:id="@+id/mNumberWatcher"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/grey_back"
+        android:gravity="center"
+        android:text="mNumberWatcher"/>
 </LinearLayout>
